<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sonic Bubbles</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="feedback">feedback</string>
    <string name="best_scores">Best Scores</string>
    <string name="how_to_play">How To Play</string>
    <string name="exit">Exit</string>
    <string name="new_game">New Game</string>
    <string name="btn_start_game">Start Game</string>
    <string name="sonic_bubbles_logo">Sonic Bubbles logo</string>
    <string name="tv_score">"Score: "</string>
    <string name="listen_again">Listen Again</string>
    <string name="instructions">  Sonic Bubbles is a very simple game. Just listen to the sequence and drag your finger over the bubbles to join them in the same order as the theme. \n  As you progress through the game, it will become more complex: the sequence will be longer and the amount of sounds used will be increased too. \n  Have fun! </string>
    <string name="right">right!</string>
    <string name="wrong">wrong</string>
    <string name="tv_level">"Level: "</string>
    <string name="tv_round">"Round: "</string>
    <string name="tv_life">"Life: "</string>
    <string name="dialog_level_title">"Select Mode: "</string>
    <string name="dialog_sound_title">"Select Sound: "</string>
    <string name="version_number">v2.3</string>
    <string name="btn_high_scores">High Scores</string>
    <string name="btn_sound_set">Sound Sets</string>
    <string name="one_more">Game Over! Play Again?</string>
    <string name="yes">Yes, please</string>
    <string name="no">No, thanks</string>
    <string name="share">Share</string>
    <string name="share_txt_1">"I just scored "</string>
    <string name="share_txt_2">" on Sonic Bubbles! Check this out "</string>
    <string name="share_txt_3">"I am playing Sonic Bubbles! Check this out "</string>
    <string name="sonic_bubbles_web">" "<a href="https://play.google.com/store/apps/details?id=pgf.sonicbubblesii">https://play.google.com/store/apps/details?id=pgf.sonicbubblesii</a></string>

</resources>
