<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/new_game"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/new_game"/>
    <item
        android:id="@+id/best_scores"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/best_scores"/>
    <item
        android:id="@+id/hot_to_play"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/how_to_play"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>
    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="always"
        android:title="@string/share"/>

</menu>